Fix navigation list on small devices

--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -238,7 +238,7 @@ a.nav-text:hover {
 		overflow-x: hidden;
 		padding: 0 0.5rem 0.5rem 0.5rem;
 		z-index: 100;
-		width: 40%;
+		width: 13rem;
 		box-shadow: 0 6px 10px -2px rgba(0,211,169,0.75);
 		-webkit-box-shadow: 0 6px 10px -2px rgba(0,211,169,0.75);
 		-moz-box-shadow: 0 6px 10px -2px rgba(0,211,169,0.75);
